Fixed regressive line-height issue and some spacing tweaks

--- a/stylebot/css/widget.css
+++ b/stylebot/css/widget.css
@@ -18,7 +18,7 @@
     display: none;
     font-family: 'Lucida Grande', Tahoma, Arial, sans-serif;
     font-size: 12px !important;
-    line-height: 10px;
+    line-height: 12px;
     margin: 0 !important;
     position: fixed !important;
     text-align: left !important;
@@ -27,10 +27,6 @@
     width: 320px !important;
     -webkit-box-shadow: 0px 0px 5px #ccc !important;
     z-index: 2147483645 !important;
-}
-
-#stylebot * {
-    line-height: 10px;
 }
 
 /* @end */
@@ -45,7 +41,7 @@
     height: auto !important;
     line-height: 14px !important;
     overflow: auto !important;
-    padding: 6px !important;
+    padding: 8px !important;
     padding-right: 0px !important;
     text-shadow: 0px 1px 1px #fff !important;
     width: auto !important;
@@ -335,6 +331,7 @@ background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAFo9M/
     font-size: 11px !important;
     margin-top: 8px !important;
     text-align: center !important;
+    height: 130px !important;
 }
 
 #stylebot-widget-options button.stylebot-button {
@@ -353,7 +350,7 @@ background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAFo9M/
 }
 
 #stylebot-main-buttons {
-    margin: 5px 5px;
+    margin: 8px 5px;
     text-align: center;
 }
 
@@ -440,7 +437,7 @@ a.stylebot-accordion-active .stylebot-accordion-icon {
 
 #stylebot-advanced {
     display: none;
-    padding: 11px 5px 0px 5px !important;
+    padding: 8px 5px 0px 5px !important;
     margin: 0px !important;
 }
 
